add json support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ add_executable(webApi main.cpp)
 
 find_package(Crow CONFIG REQUIRED)
 target_link_libraries(webApi PRIVATE Crow::Crow)
+
+find_package(nlohmann_json CONFIG REQUIRED)
+target_link_libraries(webApi PRIVATE nlohmann_json::nlohmann_json)
